[FIX]Se agregaron los estados solicitados al flujo de trabajo de la orden de venta [FIX]Se corrigieron todas las vista para adaptarlas a los nuevos estados(Visibilidad y Edición) [FIX]Se añadió la funcionalidad de cambio para el estado de Entregado cuando se han validado todas las salidas de transferencias correspondientes a la órden. [FIX]Se sobrescribió el método _get_to_invoice_qty que devuelve la cantidad a facturar ya que no se generaban las facturas porque no tenía en cuenta el nuevo estado Entregado [FIX]Se sobrescribió el método _get_invoiced encargado de computar los estados de facturación de la orden

--- a/addons/eor_sale/views/sale_view.xml
+++ b/addons/eor_sale/views/sale_view.xml
@@ -5,6 +5,41 @@
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
+            <xpath expr="//field[@name='state']" position="attributes">
+                <attribute name="statusbar_visible">draft,sent,sale,ingressed,delivered</attribute>
+            </xpath>
+            <xpath expr="//button[@name='269']" position="attributes">
+                <attribute name="attrs">
+                    {'invisible': ['|', ('invoice_count', '>', 0), ('state', 'not in', ['delivered'])]}
+                </attribute>
+            </xpath>
+            <xpath expr="//tree/field[@name='qty_delivered']" position="attributes">
+                <attribute name="attrs">
+                    {'column_invisible': [('parent.state', 'not in', ['done', 'delivered'])]}
+                </attribute>
+            </xpath>
+            <xpath expr="//button[@name='print_quotation']" position="attributes">
+                <attribute name="states">draft,delivered</attribute>
+            </xpath>
+            <xpath expr="//button[@name='action_quotation_send']" position="attributes">
+                <attribute name="states">sent,delivered</attribute>
+            </xpath>
+            <xpath expr="//button[@name='action_cancel']" position="attributes">
+                <attribute name="states">draft,sent,sale,delivered</attribute>
+            </xpath>
+            <xpath expr="//button[@name='action_done']" position="attributes">
+                <attribute name="states">sale,delivered</attribute>
+            </xpath>
+            <xpath expr="//field[@name='validity_date']" position="attributes">
+                <attribute name="attrs">{'invisible': [('state', 'in', ['sale', 'done', 'delivered'])]}</attribute>
+            </xpath>
+            <xpath expr="//field[@name='date_order']" position="attributes">
+                <attribute name="attrs">{'invisible': [('state', 'in', ['sale', 'done', 'cancel', 'delivered'])]}</attribute>
+            </xpath>
+            <xpath expr="//field[@name='invoice_status']" position="attributes">
+                <attribute name="states">sale,done,delivered</attribute>
+            </xpath>
+
             <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="attributes">
                 <attribute name="invisible">1</attribute>
             </xpath>
