--- a/addons/eor_purchase/views/purchase_view.xml
+++ b/addons/eor_purchase/views/purchase_view.xml
@@ -84,4 +84,23 @@
                 </field>
         </field>
     </record>
+
+    <record id="purchase_view_tree" model="ir.ui.view">
+        <field name="name">purchase.order.tree.view.inherit</field>
+        <field name="model">purchase.order</field>
+        <field name="inherit_id" ref="purchase.purchase_order_tree"/>
+        <field name="arch" type="xml">
+            <field name="partner_id" position="after">
+                <field name="partner_ref" string="Ref. Proveedor"/>
+            </field>
+            <field name="origin" position="attributes">
+                <attribute name="invisible">1</attribute>
+            </field>
+            <field name="state" position="after">
+                <field name="x_document_type" string="Tipo Doc.">
+                </field>
+            </field>
+        </field>
+    </record>
+
 </odoo>
