[FIX]Se actualizó la traducción del término de Transaction Info del formulario de ICT [FIX]Se ocultaron los campos price_list_id y crm_team_id del mismo formulario

--- a/addons/intercompany_transaction_ept/views/inter_company_transfer_views.xml
+++ b/addons/intercompany_transaction_ept/views/inter_company_transfer_views.xml
@@ -97,12 +97,12 @@
 								<field name="name" readonly="1" />
 							</h1>
 						</div>
-						<group string="Transaction Info">
+						<group string="Datos de Solicitud de Traspaso">
 							<group>
 								<field name="source_warehouse_id" required="True"
 									attrs="{'readonly':[('state','!=','draft')]}" />
-								<field name="price_list_id" />
-								<field name="crm_team_id" />
+<!--								<field name="price_list_id" />-->
+<!--								<field name="crm_team_id" />-->
 								<field name="transfer_fee" readonly="1"/>
 							</group>
 							<group>
