[ADD]Se añadió un campo al product.template para introducir la descripción de la clave de producto [FIX]Se cambiaron las etiquetas de los campos a las solicitadas por el cliente. [FIX]Se añadieron los campos requeridos al formulario del producto y al de facturas de clientes.

--- a/addons/cdfi_invoice/views/account_invoice_view.xml
+++ b/addons/cdfi_invoice/views/account_invoice_view.xml
@@ -69,12 +69,14 @@
                 </xpath>
                 <xpath expr="//field[@name='invoice_line_ids']/tree/field[@name='name']" position="before">
                     <field name="clave_producto"/>
+                    <field name="description_cve_prod"/>
                 </xpath>
                 <xpath expr="//field[@name='invoice_line_ids']/tree/field[@name='uom_id']" position="attributes">
                     <attribute name="invisible">1</attribute>
                 </xpath>
                 <xpath expr="//field[@name='invoice_line_ids']/tree/field[@name='uom_id']" position="before">
-                    <field name="clave_unidad"></field>
+                    <field name="clave_unidad"/>
+                    <field name="unidad_medida"/>
                 </xpath>
                 <xpath expr="//field[@name='invoice_line_ids']/tree/field[@name='discount']" position="attributes">
                     <attribute name="invisible">1</attribute>
