[ADD]Se ha añadido el campo x_document_type al modelo account.invoice y la vista de lista de facturas de proveedor [ADD]Se ha creado un grupo de acceso para mostrar/ocultar las facturas de tipo remisión. [ADD]Se añadieron las reglas de registros necesarias. [FIX]Se añadio el grupo al usuario administrador

--- a/addons/eor_purchase/views/account_invoice.xml
+++ b/addons/eor_purchase/views/account_invoice.xml
@@ -49,6 +49,9 @@
             <xpath expr="//field[@name='amount_tax_signed']" position="after">
                 <field name="total_extra_discount" string="Descuentos Extra" sum="Total Descuento Extra"/>
             </xpath>
+            <field name="state" position="after">
+                <field name="x_document_type"/>
+            </field>
         </field>
     </record>
 </odoo>
