--- a/addons/cdfi_invoice/views/invoice_supplier_view.xml
+++ b/addons/cdfi_invoice/views/invoice_supplier_view.xml
@@ -12,6 +12,17 @@
         </field>
     </record> -->
 
+    <record id="invoice_supplier_tree" model="ir.ui.view">
+        <field name="name">add field to the tree</field>
+        <field name="model">account.invoice</field>
+        <field name="inherit_id" ref="account.invoice_supplier_tree"/>
+        <field name="arch" type="xml">
+            <field name="state" position="after">
+                <field name="x_document_type"/>
+            </field>
+        </field>
+    </record>
+
     <record id="invoice_supplier_form" model="ir.ui.view">
             <field name="name">account.invoice.supplier.form</field>
             <field name="model">account.invoice</field>
