--- a/addons/intercompany_transaction_ept/views/inter_company_transfer_views.xml
+++ b/addons/intercompany_transaction_ept/views/inter_company_transfer_views.xml
@@ -100,14 +100,14 @@
 						<group string="Datos de Solicitud de Traspaso">
 							<group>
 								<field name="source_warehouse_id" required="True"
-									attrs="{'readonly':[('state','!=','draft')]}" />
-<!--								<field name="price_list_id" />-->
-<!--								<field name="crm_team_id" />-->
+									attrs="{'readonly':[('state','!=','draft')]}"/>
+								<field name="price_list_id" invisible="1"/>
+								<field name="crm_team_id" invisible="1"/>
 								<field name="transfer_fee" readonly="1"/>
 							</group>
 							<group>
 								<field name="destination_warehouse_id" required="True"
-									attrs="{'readonly':['|',('state','!=','draft'),('source_warehouse_id','=',False)]}" />
+									attrs="{'readonly':['|',('state','!=','draft'),('source_warehouse_id','=',False)]}"/>
 								<field name="currency_id" required="True" readonly="1" />
 								<field name="processed_date" readonly="1" />
 							</group>
