--- a/addons/cdfi_invoice/views/product_view.xml
+++ b/addons/cdfi_invoice/views/product_view.xml
@@ -13,8 +13,8 @@
 						<group col="4">
 		                    <field name="unidad_medida" />
 		                    <field name="clave_unidad" />
+                            <field name="description_cve_prod" widget="selection"/>
 		                    <field name="clave_producto" />
-                            <field name="description_cve_prod"/>
 		                </group>
                     </page>
 				</xpath>
