--- a/addons/manual_account_invoice_base_imponible1/views/account_invoice_view.xml
+++ b/addons/manual_account_invoice_base_imponible1/views/account_invoice_view.xml
@@ -14,5 +14,16 @@
       </field>
     </record>
 
+    <record id="manual_account_supplier_base_imponible1_view_form" model="ir.ui.view">
+      <field name="name">manual.account.invoice.base_imponible1</field>
+      <field name="model">account.invoice</field>
+      <field name="inherit_id" ref="account.invoice_supplier_form"/>
+      <field name="arch" type="xml">
+        <xpath expr="//notebook/page/field[@name='invoice_line_ids']/tree/field[@name='price_unit']"
+               position="attributes">
+          <attribute name="force_save">1</attribute>
+        </xpath>
+      </field>
+    </record>
   </data>
 </odoo>
