--- a/addons/eor_sale/views/sale_view.xml
+++ b/addons/eor_sale/views/sale_view.xml
@@ -44,7 +44,7 @@
                 <attribute name="invisible">1</attribute>
             </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="after">
-                <field name="price_unit_tax" />
+                <field name="price_unit_tax" readonly="1" /><!-- change here-->
                 <field name="precio_x_pieza" />
             </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="after">
@@ -54,7 +54,7 @@
                 <attribute name="invisible">1</attribute>
             </xpath>
             <xpath expr="//field[@name='order_line']/form/group/group/field[@name='price_unit']" position="after">
-                <field name="price_unit_tax" />
+                <field name="price_unit_tax" readonly="1" /><!-- change here-->
                 <field name="precio_x_pieza" />
             </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='product_uom']" position="after">
@@ -79,6 +79,23 @@
             <xpath expr="//field[@name='amount_tax']" position="replace">
                 <field name="taxes_widget" widget="taxes" options="{'digits': 'Product Price'}"/>
                 <field name="amount_tax" widget="monetary" options="{'currency_field': 'currency_id'}" string="Total impuestos"/>
+            </xpath>
+        </field>
+    </record>
+
+    <!-- #inherit and override para editar campo price_unit_tax solo al grupo
+    group_precio_neto_ventas_manual-->
+    <record id="second_sale_order_inherit_view_form" model="ir.ui.view">
+        <field name="name">second.sale.order.inherit.view.form</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_form"/>
+        <field name="groups_id" eval="[(6,0,[ref('eor_sale.group_precio_neto_ventas_manual')])]"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='order_line']/form/group/group/field[@name='price_unit_tax']" position="attributes">
+                <attribute name="readonly">0</attribute>
+            </xpath>
+            <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit_tax']" position="attributes">
+                <attribute name="readonly">0</attribute>
             </xpath>
         </field>
     </record>
