--- a/addons/eor_sale/views/sale_view.xml
+++ b/addons/eor_sale/views/sale_view.xml
@@ -8,11 +8,11 @@
             <xpath expr="//field[@name='state']" position="attributes">
                 <attribute name="statusbar_visible">draft,sent,sale,ingressed,delivered</attribute>
             </xpath>
-            <xpath expr="//button[@name='269']" position="attributes">
+            <!--xpath expr="//button[@name='269']" position="attributes">
                 <attribute name="attrs">
                     {'invisible': ['|', ('invoice_count', '>', 0), ('state', 'not in', ['delivered'])]}
                 </attribute>
-            </xpath>
+            </xpath-->
             <xpath expr="//tree/field[@name='qty_delivered']" position="attributes">
                 <attribute name="attrs">
                     {'column_invisible': [('parent.state', 'not in', ['done', 'delivered'])]}
@@ -44,7 +44,7 @@
                 <attribute name="invisible">1</attribute>
             </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="after">
-                <field name="price_unit_tax" readonly="1" /><!-- change here-->
+                <field name="price_unit_tax" readonly="1" force_save="1"/><!-- change here-->
                 <field name="precio_x_pieza" />
             </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="after">
@@ -54,7 +54,7 @@
                 <attribute name="invisible">1</attribute>
             </xpath>
             <xpath expr="//field[@name='order_line']/form/group/group/field[@name='price_unit']" position="after">
-                <field name="price_unit_tax" readonly="1" /><!-- change here-->
+                <field name="price_unit_tax" readonly="1" force_save="1" /><!-- change here-->
                 <field name="precio_x_pieza" />
             </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='product_uom']" position="after">
@@ -93,9 +93,11 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='order_line']/form/group/group/field[@name='price_unit_tax']" position="attributes">
                 <attribute name="readonly">0</attribute>
+                <attribute name="force_save">1</attribute>
             </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit_tax']" position="attributes">
                 <attribute name="readonly">0</attribute>
+                <attribute name="force_save">1</attribute>
             </xpath>
         </field>
     </record>
